--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,7 +1,9 @@
-$primary: #2b6777;
-$primary-dark: #275f6d;
-$secondary: #c8d8e4;
+$primary: #1591e4;
+$secondary: rgb(219, 239, 255);
+$secondary-fade: rgb(200, 216, 228, 0);
 $tertiary: #52ab98;
+$primary-dark: #275f6d;
+$tertiary-faded: rgb(82, 171, 152, 0.7);
 $white: #ffffff;
 $off-white: #f2f2f2;
 $black: black;
@@ -9,18 +11,22 @@ $main-font: Bahnschrift Condensed;
 $h-font-size: min(max(40px, 6vw), 80px);
 $p-font-size: min(max(20px, 3vw), 30px);
 
+// $primary: #2b6777;
+// $secondary: #c8d8e4;
+// $tertiary: #52ab98;
+
 @mixin small-tile {
-	p { font-size: 1.1rem; padding: 10px; color: $black }
-  h1 { font-size: 1.2rem; height: 40%; padding: 10px; color: inherit; line-clamp: 1; }
+	p { font-size: 1.1rem; padding: 10px; color: $black; background-color: unset; }
+  h1 { font-size: 1.2rem; height: 40%; padding: 10px; color: inherit; line-clamp: 1; background-color: unset; }
   img { display: none; }
 }
 @mixin medium-tile {
-  p { font-size: 1.2rem; padding: 10px; color: $black; }
-  h1 { font-size: 1.3rem; color: inherit; padding: 0 10px 0 10px }
+  p { font-size: 1.2rem; padding: 10px; color: $black; background-color: unset; }
+  h1 { font-size: 1.3rem; color: inherit; padding: 0 10px 0 10px; background-color: unset; }
   img { width: 100%; height: 165px; position: relative; object-fit: cover;}
 }
 @mixin big-tile {
-  p { font-size: 1.5rem; color: $off-white; padding: 20px; z-index: 2; position: relative; }
-  h1 { font-size: 2rem; color: $off-white; padding: 20px; z-index: 2; position: relative; }
+  p { font-size: 1.5rem; color: $off-white; padding: 0 20px 20px 20px; z-index: 2; position: relative; background-color: $tertiary-faded;}
+  h1 { font-size: 2rem; color: $off-white; padding: 20px; z-index: 2; position: relative; background-color: $tertiary-faded;}
   img { width: 100%; height: 100%; position: absolute; object-fit: cover; }
 }
