work on the about page

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,9 +1,9 @@
 $primary: #1591e4;
-$secondary: rgb(219, 239, 255);
-$secondary-fade: rgb(200, 216, 228, 0);
-$tertiary: #52ab98;
 $primary-dark: #275f6d;
-$tertiary-faded: rgb(82, 171, 152, 0.7);
+$secondary: #DBEFFF;
+$secondary-fade: rgb(200, 216, 228, 0);
+$tertiary: #106faf;
+$tertiary-faded: #1591e4b4;
 $white: #ffffff;
 $off-white: #f2f2f2;
 $black: black;
